# polymarket-sniperbot

./: Cargo.toml  README.md  market_log1.txt
src/: main.rs  market_log1.txt  market_log2.txt  market_log3.txt  market_log4.txt  market_log5.txt
src/app/: mod.rs  modules.rs
src/ui/: ui.rs
src/ws/: polymarket.rs
