[package]
name = "polymarket-sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version="1", features = ["full"]}
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = {version="0.11", features = ["json"]}
serde = {version="1", features=["derive"]}
serde_json = "1"